--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,14 +1,13 @@
 .background video {
   width: 100%;
-  height: 90vh;
+  height: 100vh;
   object-fit: cover;
-  z-index: -2
-  ;
+  z-index: -2;
 }
 
 .content {
   position: absolute;
-z-index: 1;
+  z-index: 1;
   width: 100%;
   height: 100%;
   top: 0;
@@ -16,14 +15,12 @@ z-index: 1;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  
 }
 
 .content img {
   max-width: 100%;
   height: auto;
   width: 600px;
-
 }
 .content h4 {
   text-align: center;
@@ -32,12 +29,6 @@ z-index: 1;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 24px;
 }
-
-/* .background h4 {
-  color: white;
-  margin-bottom: 48px;
-  text-align: center;
-} */
 
 .content a {
   text-align: center;
@@ -63,8 +54,8 @@ z-index: 1;
     width: 100%;
   }
 
-  .content{
-  margin-bottom: 48px;
+  .content {
+    margin-bottom: 48px;
   }
   .content h4 {
     font-size: 18px;
